[gd_scene load_steps=2 format=3 uid="uid://dov6v0cosov35"]

[ext_resource type="Script" path="res://scripts/UI/GameUI.gd" id="1_axr3r"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_axr3r")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="RoomLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Room X: Door type"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 10

[node name="Item1" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Item 1"

[node name="Item2" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Item 1"

[node name="Item3" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Item 1"
